# InventoryEntryOfSmartICE

./: .env.example  .gitignore  .mcp.json  CLAUDE.md
backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml  render.yaml
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  voice_entry.py
backend/app/routes/: __init__.py  voice.py
backend/app/services/: __init__.py  gemini_extractor.py  qwen_extractor.py  xunfei_asr.py
frontend/: .env.production  .gitignore  App.tsx  CLAUDE.md  constants.ts  types.ts  vite.config.ts
frontend/components/: ApprovalPage.tsx  ChangePasswordPage.tsx  EntryForm.tsx  LoginPage.tsx  ProfilePage.tsx  QueueHistoryPage.tsx  Sidebar.tsx
frontend/components/ui/: AutocompleteInput.tsx  GlassCard.tsx  UpdateBanner.tsx
frontend/contexts/: AuthContext.tsx  PreloadDataContext.tsx
frontend/docs/: REALTIME_VOICE_TESTING.md  WEBSOCKET_AUTOCLOSE_FIX.md
frontend/services/: adminService.ts  authService.ts  dashboardService.ts  draftService.ts  imageService.ts  indexedDBService.ts  inventoryService.ts  receiptRecognitionService.ts  supabaseClient.ts  supabaseService.ts  uploadQueueService.ts  versionService.ts  voiceEntryService.ts
frontend/src/styles/: globals.css
plugins/.claude-plugin/: marketplace.json
plugins/smartice-inventory/.claude-plugin/: plugin.json
supabase/: INDEX.md  MIGRATION_CHECKLIST.md  QUICKSTART.md  README.md  SCHEMA.md
supabase/migrations/: 20241203000001_init_auth_rbac.sql  20241203000002_seed_stores.sql  20251203222558_drop_old_ims_tables.sql  20251203225513_create_ims_users.sql
(+1 files in other folders)
